
Changelog
=========

4.3.1 (unreleased)
------------------

- Activate statefilter also in subdossiers listings.
  [phgross]

- Fixed french translations
  [phgross]

- Add sablon-template tab on template dossiers.
  [deiferni]

- No longer show sablon templates in navigation.
  [deiferni]

- Fix downloading protocol-previews in safari.
  [deiferni]

- Fix downloading sablong templates in template dossier.
  [deiferni]

- Optimize member and membership view:

  - Added Membership listing to MemberView.
  - Added Edit functionality for Memberships.
  - Added Remove functionality for Memberships.
  - Order Memberships on date_from date by default.
  - Add memberhip_id column to membership table.

  [phgross]

- Extend meeting type views with corresponding watermark icon.
  [phgross]

- Extend meeting type links with corresponding icon.
  [phgross]

- Make sablon templates configurable on commitee-container. The following
  templates are available: Pre-protocol, protocol and excerpt.
  [deiferni]

- Made different SchemaMigration Upgradesteps more robust.
  [phgross]

- Customize CSRF confirmation page and add German translations.
  [lgraf]

- Added translations for the SearchBoxViewlet placeholder.
  [phgross]

- CSRF: always allow object annotations to be written.
  [jone, deiferni]

- Fix icons for the treeporlet favorite functionality.
  [phgross]

- Made DeactivatedFKConstraint compatible with newer alembic versions.
  [phgross]

- Fix submitting proposals that reference mails.
  [deiferni]

- Meeting: add editing protocols, creating/downloading/updating protocol documents.
  [deiferni]

- Examplecontent profile: Add french to the supported language.
  [phgross]

- Customize LanguageSelector viewlet to display it as a menu.
  [phgross]

- Fixed actor for all task activities.
  [phgross]

- Add initial notification support:

  - Added NotificationCenter including SQL representations for activitities, notifications, resource and watchers.