@@ -1,0 +1,8 @@
+<?xml version="1.0"?>
+<object name="opengever.meeting.proposal">
+  <property name="allowed_content_types" purge="False">
+    <element value="opengever.document.document"/>
+    <element value="ftw.mail.mail"/>
+  </property>
+
+</object>
